<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/colorwhite">

    <LinearLayout
        android:id="@+id/l1"
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin"
        tools:ignore="MissingConstraints">

        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/register"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/modifiedEditText"
                android:id="@+id/firstname"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/first_name_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/modifiedEditText"
                android:id="@+id/lastname"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/last_name_hint"/>
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/modifiedEditText"
                android:inputType="number"
                android:id="@+id/nationalnumber"
                android:maxLines="1"
                android:hint="@string/national_number_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/dateEditText"
                style="@style/modifiedEditText"
                android:inputType="none"
            android:maxLines="1"
            android:hint="@string/date_of_birth_hint"
            android:focusable="false"
            android:clickable="true"
                android:onClick="showDatePickerDialog"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/modifiedEditText"
                android:id="@+id/placeofbirth"
                android:hint="@string/place_of_birth_hint"
                android:maxLines="1"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
             android:layout_marginTop="@dimen/signup_text_margin_top"

            >

        <Spinner
            android:background="@drawable/spinner_border"

                style="@style/GenderSpinnerStyle"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
android:backgroundTint="@color/colorwhite"
                android:hint="@string/gender_hint"
                android:spinnerMode="dropdown"
                android:id="@+id/spinner_gender"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:layout_marginTop="@dimen/loginViewsMargin"
            >


            <androidx.appcompat.widget.AppCompatButton

                android:onClick="viewNextClicked"
                style="@style/loginButton"
                android:layout_marginRight="40dp"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="@string/next_button_text"/>






        </LinearLayout>


        <TextView
            android:onClick="viewLoginClicked"
            android:id="@+id/back_sign_in"
            style="@style/parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            android:text="@string/signup_login_hint"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
